# wgsl_shadertoy

./: .nvim.lua  Cargo.toml  README.md  bacon.toml  rust-toolchain.toml
.cargo/: config.toml
src/: app.rs  config.rs  gpupipeline.rs  main.rs  model.rs  shader.wgsl
