[package]
name = "ray_marching"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bytemuck = { version = "1.23", features = ["derive"] }
cgmath = "0.18.0"
env_logger = "0.11.8"
futures = "0.3.31"
gfx-hal = "0.9.0"

log = "0.4.27"
pollster = "0.4.0"
rand = "0.9.1"
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
wgpu = { version = "25.0.0", features = [
    "vulkan",
    "webgpu",
    "wgsl",
], default-features = false }
winit = "0.30.10"
image = { version = "0.25.2", default-features = false, features = [
    "jpeg",
    "png",
] }
